fix: adjust floating audio controller position to avoid chat widget overlap

--- a/style.css
+++ b/style.css
@@ -1059,7 +1059,7 @@ main {
 .audio-floating-control {
   position: fixed;
   bottom: 25px;
-  right: 25px;
+  right: 95px;
   z-index: 1000;
 }
 
